created components folder and added local host 3001

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/jimdoan4/dating-application.git"
   },
+  "engines": {
+    "node": "10.15.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
