--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
-{
-    "connectionString": "mongodb://localhost/dating-application",
-    "secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
-}
+// {
+//     "connectionString": "mongodb://localhost/dating-application",
+//     "secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+// }
