--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.11"
-    // "rootpath": "^0.1.2"
+    "nodemon": "^1.18.11",
+    "rootpath": "^0.1.2"
   }
 }
