--- a/package.json
+++ b/package.json
@@ -24,16 +24,12 @@
   },
   "homepage": "https://github.com/jimdoan4/dating-application#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "express-jwt": "^5.3.1",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.11",
-    "rootpath": "^0.1.2"
+    "nodemon": "^1.18.11" 
   }
 }
+
