--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^16.8.6",
     "react-geocode": "^0.1.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^4.0.0",
     "styled-components": "^4.2.0"
   },
   "proxy": "http://localhost:3001",
